更新参数